<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fon">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="54dp"
        android:layout_height="60dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:text="@string/_1"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pas1" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="54dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:gravity="center"
        android:text="@string/_2"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt1"
        app:layout_constraintStart_toEndOf="@+id/txt1"
        app:layout_constraintTop_toTopOf="@+id/txt1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="54dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:gravity="center"
        android:text="@string/_3"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt2"
        app:layout_constraintStart_toEndOf="@+id/txt2"
        app:layout_constraintTop_toTopOf="@+id/txt2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt4"
        android:layout_width="54dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/_4"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/txt1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt1"
        app:layout_constraintTop_toBottomOf="@+id/txt1" />

    <TextView
        android:id="@+id/txt5"
        android:layout_width="54dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/_5"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/txt2"
        app:layout_constraintStart_toStartOf="@+id/txt2"
        app:layout_constraintTop_toTopOf="@+id/txt4" />

    <TextView
        android:id="@+id/txt6"
        android:layout_width="54dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/_6"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/txt3"
        app:layout_constraintStart_toStartOf="@+id/txt3"
        app:layout_constraintTop_toTopOf="@+id/txt5" />

    <TextView
        android:id="@+id/txt7"
        android:layout_width="54dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/_7"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/txt4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt4"
        app:layout_constraintTop_toBottomOf="@+id/txt4" />

    <TextView
        android:id="@+id/txt8"
        android:layout_width="54dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/_8"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/txt5"
        app:layout_constraintStart_toStartOf="@+id/txt5"
        app:layout_constraintTop_toTopOf="@+id/txt7" />

    <TextView
        android:id="@+id/txt9"
        android:layout_width="54dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/_9"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/txt6"
        app:layout_constraintStart_toStartOf="@+id/txt6"
        app:layout_constraintTop_toTopOf="@+id/txt8" />

    <TextView
        android:id="@+id/txt0"
        android:layout_width="54dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/txt8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt8"
        app:layout_constraintTop_toBottomOf="@+id/txt8" />

    <ImageView
        android:id="@+id/imgfingerptint"
        android:layout_width="66dp"
        android:layout_height="83dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt0"
        app:layout_constraintEnd_toEndOf="@+id/txt7"
        app:layout_constraintStart_toStartOf="@+id/txt7"
        app:layout_constraintTop_toTopOf="@+id/txt0"
        app:srcCompat="@drawable/imgefingerprint"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/edipasswordall"
        android:layout_width="43dp"
        android:layout_height="26dp"
        android:ems="10"
        android:visibility="gone"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt2"
        app:layout_constraintEnd_toEndOf="@+id/txt3"
        app:layout_constraintStart_toStartOf="@+id/txt1"
        tools:ignore="Autofill,LabelFor" />

    <View
        android:id="@+id/pas1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="224dp"
        android:background="@drawable/shadov"
        app:layout_constraintEnd_toEndOf="@+id/txt2"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/pas2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/shadov"
        app:layout_constraintBottom_toBottomOf="@+id/pas1"
        app:layout_constraintStart_toEndOf="@+id/pas1"
        app:layout_constraintTop_toTopOf="@+id/pas1"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/pas3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/shadov"
        app:layout_constraintBottom_toBottomOf="@+id/pas2"
        app:layout_constraintStart_toEndOf="@+id/pas2"
        app:layout_constraintTop_toTopOf="@+id/pas2"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/pas4"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/shadov"
        app:layout_constraintBottom_toBottomOf="@+id/pas3"
        app:layout_constraintStart_toEndOf="@+id/pas3"
        app:layout_constraintTop_toTopOf="@+id/pas3"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/pas5"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/shadov"
        app:layout_constraintBottom_toBottomOf="@+id/pas4"
        app:layout_constraintStart_toEndOf="@+id/pas4"
        app:layout_constraintTop_toTopOf="@+id/pas4"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/pas6"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/shadov"
        app:layout_constraintBottom_toBottomOf="@+id/pas5"
        app:layout_constraintStart_toEndOf="@+id/pas5"
        app:layout_constraintTop_toTopOf="@+id/pas5"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgpasback"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt0"
        app:layout_constraintEnd_toEndOf="@+id/txt9"
        app:layout_constraintStart_toStartOf="@+id/txt9"
        app:layout_constraintTop_toTopOf="@+id/txt0"
        app:srcCompat="@drawable/backbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>